# examples

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: build-telegram.yml  build.yml
patches/: rules_apple_no_exec_platform_constraint.patch  telegram-ios-cross-compile.patch
